# tejmagar

./: .gitignore  .gitmodules  Cargo.toml  README.md  cargo.mk
.github/workflows/: deploy-docs.yml
src/: lib.rs  main.rs
src/headers/: mod.rs
src/parser/: mod.rs
src/request/: mod.rs
src/response/: mod.rs
src/status/: mod.rs
