[package]
name = "tejmagar"
version = "0.1.0"
edition = "2021"
authors = ["Tej Magar", "@RandyMcMillan <admin@gnostr.org>"]
description = "rusty_web demo."
license = "MIT"
documentation = "https://tejmagar.github.io/rusty-web/"
repository = "https://github.com/tejmagar/rusty-web/"

[dependencies]
regex = "1.10.3"
signal-hook = "0.3.17"

tempfile = "3.10.0"
urlencoding = "2.1.3"
web-view = "0.7.3"

[dev-dependencies]
rand = "0.8.5"
